syntax = "proto3";

package cortex.agent.v1;

option go_package = "github.com/coretexos/cap/go/cortex/agent/v1";
option java_package = "ai.cortex.cap.agent.v1";
option java_multiple_files = true;
option csharp_namespace = "Cortex.Agent.V1";
option php_namespace = "Cortex\\Agent\\V1";
option ruby_package = "Cortex::Agent::V1";

// JobPriority represents scheduling hints.
enum JobPriority {
    JOB_PRIORITY_UNSPECIFIED = 0;
    JOB_PRIORITY_INTERACTIVE = 1;
    JOB_PRIORITY_BATCH = 2;
    JOB_PRIORITY_CRITICAL = 3;
}

// JobStatus captures lifecycle states for a job.
enum JobStatus {
    JOB_STATUS_UNSPECIFIED = 0;
    JOB_STATUS_PENDING = 1;
    JOB_STATUS_SCHEDULED = 2;
    JOB_STATUS_DISPATCHED = 3;
    JOB_STATUS_RUNNING = 4;
    JOB_STATUS_SUCCEEDED = 5;
    JOB_STATUS_FAILED = 6;
    JOB_STATUS_CANCELLED = 7;
    JOB_STATUS_DENIED = 8;
    JOB_STATUS_TIMEOUT = 9;
}

// JobRequest represents a schedulable unit of work.
message JobRequest {
    string job_id = 1;           // globally unique job identifier
    string topic = 2;            // bus subject, e.g. job.chat.simple
    JobPriority priority = 3;    // scheduling hint
    string context_ptr = 4;      // opaque pointer to input payload
    string adapter_id = 5;       // optional specialization hint
    map<string, string> env = 6; // tenant, locale, sandbox flags, etc.
    string parent_job_id = 7;    // optional parent link
    string workflow_id = 8;      // optional workflow identifier
    int32 step_index = 9;        // optional ordering within a workflow
}

// JobResult conveys the outcome of a job.
message JobResult {
    string job_id = 1;            // originating job identifier
    JobStatus status = 2;         // terminal or transitional state
    string result_ptr = 3;        // pointer to output payload
    string worker_id = 4;         // emitting worker
    int64 execution_ms = 5;       // elapsed processing time in milliseconds
    string error_code = 6;        // optional machine-readable error
    string error_message = 7;     // optional human-readable error
}
